# AutonomousRobotics

./: README.md
src/ar_loc_base/launch/: test_ar.launch  test_gmapping.launch
src/ar_loc_base/src/ar_loc_base/: rover_kf.py  rover_odo.py  rover_pf.py
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/collision_avoidance_base/: CMakeLists.txt
src/collision_avoidance_base/launch/: ca.launch
src/collision_avoidance_base/src/: collision_avoidance_base.cpp
src/face_detect_base/: CMakeLists.txt
src/face_detect_base/launch/: face_detect.launch
src/face_detect_base/msg/: Faces.msg
src/face_detect_base/nodes/: rosfacedetect.py
src/floor_nav/: CMakeLists.txt  package.xml
src/floor_nav/cfg/: TaskGoToPose.cfg  TaskGoToPoseRover.cfg  TaskStareAtFace.cfg
src/floor_nav/launch/: launch_rover.launch
src/floor_nav/missions/: WaitStareAtFace.py  test.py  test_goto_pose.py  test_goto_pose_rover.py
src/floor_nav/src/: SimTasksEnv.cpp
src/floor_nav/tasks/: TaskGoTo.cpp  TaskGoToPose.cpp  TaskGoToPose.h  TaskGoToPoseRover.cpp  TaskGoToPoseRover.h  TaskStareAtFace.cpp  TaskStareAtFace.h  TaskWaitForFace.cpp  TaskWaitForFace.h
src/joyControlAR/: CMakeLists.txt  package.xml
src/joyControlAR/scripts/: joy_node.py
src/keyboard_teleop/: CMakeLists.txt  package.xml
src/keyboard_teleop/src/: teleop.py
src/obstacle_avoidance_base/launch/: ca_teleop.launch  planner.launch
src/obstacle_avoidance_base/src/: obstacle_avoidance.cpp
src/occgrid_planner_base/: CMakeLists.txt  package.xml
src/occgrid_planner_base/launch/: planner.launch  planner_obst.launch  planner_obst_expl.launch
src/occgrid_planner_base/src/: occgrid_explorer.cpp  occgrid_planner.cpp  path_follower.cpp
src/rover_driver_base/: CMakeLists.txt
src/rover_driver_base/launch/: rover.launch  rover_odom.launch
src/rover_driver_base/nodes/: rover_odom.py
src/vrep_gmapping/launch/: gmapping_bubblebot.launch
src/vrep_ros_teleop/: package.xml
(+4 files in other folders)
